// Copyright 2025 The Google AI Edge Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package rag.core;

option java_multiple_files = true;
option java_package = "com.google.ai.edge.localagents.rag.models.proto";

message EmbedText {
  // Type of task for which the embedding will be used.
  enum TaskType {
    // Unset value, which will default to one of the other enum values.
    TASK_TYPE_UNSPECIFIED = 0;

    // Specifies the given text is a query in a search/retrieval setting.
    RETRIEVAL_QUERY = 1;

    // Specifies the given text is a document from the corpus being searched.
    RETRIEVAL_DOCUMENT = 2;

    // Specifies the given text will be used for STS.
    SEMANTIC_SIMILARITY = 3;

    // Specifies that the given text will be classified.
    CLASSIFICATION = 4;

    // Specifies that the embeddings will be used for clustering.
    CLUSTERING = 5;

    // Specifies that the given text will be used for question answering.
    QUESTION_ANSWERING = 6;

    // Specifies that the given text will be used for fact verification.
    FACT_VERIFICATION = 7;

    // Specifies that the given text will be used for code retrieval.
    CODE_RETRIEVAL = 8;
  }
  optional TaskType task = 1;
  // Optional identifier of the text content. This may be prepended to the
  // input or otherwise used within a prompt, depending on the task-specific
  // instruction format.
  optional string title = 2;
  optional string text = 3;
  // Whether the text is a query. If true, the text will be used as a query.
  // Otherwise, the text will be used as a document.
  optional bool is_query = 4;
}

message TextEmbeddingRequest {
  repeated EmbedText embed_texts = 2;
}
